--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gulp-cli": "^2.0.1",
     "gulp-csso": "^3.0.1",
     "gulp-sass": "^4.0.2",
-    "gulp-sass-lint": "^1.4.0"
+    "gulp-sass-lint": "^1.4.0",
+    "minimatch": ">=3.0.2"
   },
   "devDependencies": {},
   "scripts": {
