--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gulp-csso": "^3.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.4.0",
-    "minimatch": ">=3.0.2"
+    "minimatch": ">=3.0.2",
+    "lodash": ">=4.17.5"
   },
   "devDependencies": {},
   "scripts": {
